// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary correctly 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    €1,502,345.00
  </h1>
</div>
`;

exports[`Should render ExpensesSummary with one expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    €546.32
  </h1>
</div>
`;
